--- a/EcoSphere_Connect/index.html
+++ b/EcoSphere_Connect/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT4Climate: Slimme Technologieën voor een Duurzame Toekomst</title>
-    <link rel="stylesheet" href="recources/css/index.css">
+    <link rel="stylesheet" href="./resources/css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 
@@ -70,7 +70,7 @@
                     een betere wereld voor de generaties van morgen. <strong>Doe met ons mee en maak impact!</strong>
                 </p>
             </section>
-            <img src="./recources/images/Iot4Climate_bedrijf.webp" alt="afbeelding van het bedrijf" width="500">
+            <img src="./resources/images/Iot4Climate_bedrijf.webp" alt="afbeelding van het bedrijf" width="500">
             <!-- Sectie 2: klimaatverandering -->
             <section>
                 <div id="climate_change">
@@ -137,7 +137,7 @@
                             klimaatverandering verminderen en een duurzamere toekomst opbouwen.
                         </p>
                     </section>
-                    <img src="./recources/images/klimaatverandering_vanuit_de_samenhang.jpg" alt="Klimaatverandering"
+                    <img src="./resources/images/klimaatverandering_vanuit_de_samenhang.jpg" alt="Klimaatverandering"
                         width="800" height="400">
                 </div>
             </section>
@@ -170,11 +170,11 @@
                                 met
                                 zonnepanelen, waardoor straatverlichting volledig duurzaam wordt aangedreven
                             </p>
-                            <img src="./recources/images/smart_lighting.webp"
+                            <img src="./resources/images/smart_lighting.webp"
                                 alt="afbeelding van een voorbeeld van slimme IoT-verlichting" width="600" height="600">
                         </div>
                         <div>
-                            <img src="./recources/images/monitoring_en_aanpak_van_stedelijke_hitte-eilanden.webp"
+                            <img src="./resources/images/monitoring_en_aanpak_van_stedelijke_hitte-eilanden.webp"
                                 alt="afbeelding van een voorbeeld van het monitoren van stedelijke hitte-eilanden"
                                 width="600" height="600">
                             <h2>Monitoring van Stedelijke Hitte-eilanden</h2>
@@ -213,7 +213,7 @@
                                 weersvoorspellingsmodellen, waardoor vervuilingspieken beter kunnen worden voorspeld en
                                 aangepakt.
                             </p>
-                            <img src="./recources/images/luchtkwaliteitsensor.webp"
+                            <img src="./resources/images/luchtkwaliteitsensor.webp"
                                 alt="afbeelding van een voorbeeld hoe een luchtkwaliteitsensor er zou uit kunnen zien"
                                 width="500" height="500">
                         </div>
@@ -234,23 +234,24 @@
                 <div class="left-section">
                     <h2>IoT4climate</h2>
                     <p>Locatie: xaverianenstraat 10, 8200 Brugge <img
-                            src="./recources/images/unoline-icons/unoline-icons/Unoline/Essentials/navigation.svg"
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Essentials/navigation.svg"
                             alt="de locatie van de vestiging" class="icons"></p>
                     <p>Email: info@iot4climate.com <img
-                            src="./recources/images/unoline-icons/unoline-icons/Unoline/Essentials/mail.svg"
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Essentials/mail.svg"
                             alt="de e-mail van het bedrijf" class="icons"></p>
                     <p>Telefoon: 012-3456789 <img
-                            src="./recources/images/unoline-icons/unoline-icons/Unoline/Essentials/smartphone.svg"
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Essentials/smartphone.svg"
                             alt="nummer van het bedrijf" class="icons"></p>
-                    <P>Site: www.iot4clim./recources/images/unoline-icons/unoline-icons/Unoline/Essentials/search.svg"
-                            alt="de Site" class="icons"></P>
-                    <p class="so./recources/images/unoline-icons/unoline-icons/Unoline/Social/Facebook.svg"
+                    <P>Site: www.iot4clim <img
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Essentials/search.svg"
+                            alt="De Site" class="icons"> </P>
+                    <p class=""><img src="./resources/images/unoline-icons/unoline-icons/Unoline/Social/Facebook.svg"
                             alt="onze facebook pagina"> <img
-                            src="./recources/images/unoline-icons/unoline-icons/Unoline/Social/Instagram.svg"
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Social/Instagram.svg"
                             alt="onze Instagrampagina"> <img
-                            src="./recources/images/unoline-icons/unoline-icons/Unoline/Social/Tik_Tok.svg"
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Social/Tik_Tok.svg"
                             alt="onze tik tok pagina"> <img
-                            src="./recources/images/unoline-icons/unoline-icons/Unoline/Social/WhatsApp.svg"
+                            src="./resources/images/unoline-icons/unoline-icons/Unoline/Social/WhatsApp.svg"
                             alt="onze WhatsApp"></p>
 
                 </div>
@@ -283,7 +284,7 @@
                 target="_blank" style="color: #fff;">NOAA</a>.</p>
         <p>&copy; 2024 EcoSphere Connect. Alle rechten voorbehouden.</p>
     </footer>
-    
+
 </body>
 
 </html>
